FIX: ScrollBar in project tracker and teacherbody height to 90vh

--- a/src/Styling/TeacherBody.css
+++ b/src/Styling/TeacherBody.css
@@ -4,6 +4,7 @@
   padding: 2.5rem 1.575rem;
   background-color: #b2e4fa;
   height: 100%;
+  min-height: 90vh;
 }
 
 /* Scroll bar CSS */
@@ -39,6 +40,7 @@
 .progess-tracker-header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2rem;
 }
 
 /* Heading  project tracker CSS  */
@@ -70,7 +72,6 @@
 .student-project-wrapper {
   display: flex;
   flex-direction: column;
-  margin-top: 3rem;
 }
 
 .student-projects {
